2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* packet.cc (packet_roundabout_test): Test rdata packets too.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* netsync.cc (session): 
	* commands.cc (read): Adjust to match previous change.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* packet.{hh,cc} (struct packet_db_writer): Remove old guard
	against accidentally ingesting public keys -- this has not been
	useful for some years.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* diff_patch.hh (struct content_merger): Oops, forgot to remove
	the merge2 prototype.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* std_hooks.lua: 
	* lua.cc (hook_merge2): 
	* diff_patch.cc (try_to_merge_files): Remove merge2 code, since we
	no longer do merge2's.  (We can always revive it if we add suture
	support.)

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* packet.cc (consume_file_delta): Remove unused 4-argument form.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* lua.{cc,hh} (hook_resolve_file_conflict)
	(hook_resolve_dir_conflict): Remove dead code.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* tests/t_selectors_b_h.at, testsuite.at: New test.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* database.cc (manifest_cert_exists, put_manifest_cert): 
	(get_manifest_cert, get_manifest_certs): Remove unused methods.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* database.cc (put_reverse_version, put_file_reverse_version):
	Whoops, missed some dead code.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* revision.cc (build_roster_style_revs_from_manifest_style_revs):
	Remove unused variable; silence gcc warning.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* packet.cc (consume_file_reverse_delta) 
	(struct feed_packet_consumer): Remove support for nonexistent
	"frdelta" packet type.
	* database.{hh,cc} (put_reverse_version)
	(put_file_reverse_version): Remove unused methods.
	* key_store.cc (struct keyreader): Remove obsolete methods.
